# group-finder

./: .black  .env.template  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  docker-compose.yml  mypy.ini  pyproject.toml  services.env.template
app/: config.py  main.py  setup_app.py
app/scraper/: run.py
server/: settings.py  urls.py
server/apps/gf/: apps.py
server/apps/scraper/: apps.py  exceptions.py  repo.py  views.py
server/apps/scraper/models/: institutes.py
server/apps/shared/: apps.py
server/apps/shared/migrations/: 0001_initial.py  0002_rename_fields_into_name.py  0003_students_name_is_not_unique.py
server/apps/shared/models/: __init__.py  groups.py  institutes.py  reports_archive.py  students.py  students_archive.py
