[tool.poetry]
name = "group-finder"
version = "0.1.0"
description = "Group Finder"
authors = ["Dolgov Denis <dindilon2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.3"
pydantic = "^2.11.6"
fake-useragent = "^2.2.0"
bs4 = "^0.0.2"
requests = "^2.32.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
